--- a/src/containers/site/Home/Home.css
+++ b/src/containers/site/Home/Home.css
@@ -10,27 +10,6 @@
 ***********************************************/
 
 
-/***********************************************
-************************************************
- FONT FAM's -> None works on safari / All works on Android
- ***********************************************/
-@import url('https://fonts.cdnfonts.com/css/edwardian-scr-alt-itc-tt');
-@font-face {
-    font-family: 'Ballet';
-    src: url('../../../font/Ballet-Regular-VariableFont_opsz.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-@import url('https://fonts.googleapis.com/css2?family=Luxurious+Script&display=swap');
-@font-face {
-    font-family: 'balletregular';
-    src: url('../../../font/ballet-regular-variablefont_opsz-webfont.woff2') format('woff2'),
-        url('../../../font/ballet-regular-variablefont_opsz-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
 
 
 #Home {
