--- a/src/containers/site/menu/menu.css
+++ b/src/containers/site/menu/menu.css
@@ -3,7 +3,7 @@
     margin-bottom: 150px;
 }
 .h2Menu, .h1Menu {
-    font-family: 'Edwardian Scr Alt ITC TT', sans-serif;
+    font-family: 'Edwardian Scr Alt ITC TT', 'Luxurious Script', 'Balletregular', sans-serif;
     color: #be9837;
     font-size: 3.5rem;
 }
